--- a/docs/stat564/note_stat564.Rmd
+++ b/docs/stat564/note_stat564.Rmd
@@ -761,14 +761,14 @@ $$\hat\sigma^2=MS_{PE}=\frac{SS_{PE}}{df_{PE}}$$
 ### 5.2 Variance-stabilizing Transformations
 P.172 TABLE 5.1 Useful Variance-Stabilizing Transformations
 
-Relationship of $σ^2$ to E(y)|Transfonnation
+Relationship of $σ^2$ to $E(y)$ |Transfonnation
 |---|---
-$σ^2 constant$    |$y′=y $ (no transformation)
-$σ^2 E(y)$        |$y′=\sqrt y $ (square root; Poisson data)
-$σ^2 E(y)[1−E(y)]$|$y′=\sin^{−1}(\sqrt y)$ (arcsin; binomial proportions $0≤y_i≤1$)
-$σ^2 [E(y)]^2$    |$y′=\ln(y)$ (log)
-$σ^2 [E(y)]^3$    |$y′=y^{−1/2} $(reciprocal square root)
-$σ^2 [E(y)]^4$    |$y′=y^{−1} $(reciprocal)
+$σ^2\propto constant$    |$y′=y $ (no transformation)
+$σ^2\propto E(y)$        |$y′=\sqrt y $ (square root; Poisson data)
+$σ^2\propto E(y)[1−E(y)]$|$y′=\sin^{−1}(\sqrt y)$ (arcsin; binomial proportions $0≤y_i≤1$)
+$σ^2\propto [E(y)]^2$    |$y′=\ln(y)$ (log)
+$σ^2\propto [E(y)]^3$    |$y′=y^{−1/2} $ (reciprocal square root)
+$σ^2\propto [E(y)]^4$    |$y′=y^{−1} $ (reciprocal)
 
 ### 5.3 Transformations to linearize the model
 P.177 Figure 5.4 Linearizable functions. (From Daniel and Wood [1980])
