--- a/static/stat565/hw_stat565.Rmd
+++ b/static/stat565/hw_stat565.Rmd
@@ -1,11 +1,13 @@
 ---
-title: 'STAT565 HW0'
-author: "Shen Qu"
+title: 'STAT565 Homework'
+author: ""
 date: "Winter 2019"
 output: html_document
 ---
 
+#  {.tabset .tabset-fade .tabset-pills}
 
+## HW0
 
 ### Problem 1 (2.1)
 
