--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -1,6 +1,6 @@
 ---
-title: 'STAT562 Homework'
-author: ""
+title: 'STAT562 Homework 1'
+author: "Shen Qu"
 date: "Winter 2019"
 output: html_document
 ---
