--- a/static/stat562/hw_stat562.Rmd
+++ b/static/stat562/hw_stat562.Rmd
@@ -45,8 +45,7 @@ $$f_Z(z)=\begin{cases}f_X(g^{-1}(z))|\frac{d}{dz}g^{-1}(z)|=\frac14(3z^{-\frac12
 
 **4.11** Let U the number of trials needed to get the first head and V the number of trials needed to get two heads in repeated tosses of a fair coin. Are U and V independent random variables?
 
-
-The support of the distribution of (U,V) is $\{(u,v):u=1,2,..;v=u+1,u+2,..\}$. This is not a cross-product set. Therefore, U and V are not independent. More simply, if we know $U=u$, then we know $V>u$.
+For $U\sim Geom(p=\frac12),u=1,2..$ and $V\sim N Bin(p=\frac12,r=2),v=2,3..$, the distribution of (U,V) is $\{(u,v):u=1,2,..;v=u+1,u+2,..\}$, which is not a cross-product set. Given $U=u$, $V>u$ is always true and U and V are not independent.
 
 
 ---
