--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'STAT562 Homework 1'
+title: 'STAT562 Homework'
 author: "Shen Qu"
 date: "Winter 2019"
 output: html_document
@@ -17,13 +17,13 @@ $$\because \int_0^1\int_0^2f(x,y)dxdy=\int_0^1\int_0^2C(x+2y)dxdy=C\int_0^1\left
 
 $$\therefore C=\frac14$$
 
----
+  ---
 
  (b). Find the marginal distribution of X.
  
  $$f_X(x)=\begin{cases}\int_0^1f(x,y)dy=\int_0^1\frac14(x+2y)dy=\frac14\left[xy+y^2\right]_0^1=\frac14(x+1)& 0<x<2\\ 0 & otherwise \end{cases}$$
 
----
+  ---
 
  (c). Find the joint cdf of X and Y.
  
@@ -33,7 +33,7 @@ $$\therefore C=\frac14$$
  
 $$=\begin{cases}0& y\le0,x\le0\\\int_0^x\int_0^y\frac14(u+2v)dvdu=\frac14\int_0^x[uv+v^2]_{v=0}^{y}du=\frac14\int_0^x(yu+y^2)du=\frac14[\frac{yu^2}2+y^2u]_{u=0}^x=\frac{x^2y}8+\frac{xy^2}4&0<y<1,0<x<2\\\int_0^2\int_0^y\frac14(u+2v)dvdu=\frac14\int_0^2[uv+v^2]_{v=0}^{y}du=\frac14\int_0^2(yu+y^2)du=\frac14[\frac{yu^2}2+y^2u]_{u=0}^2=\frac{y^2}2+\frac{y}2&0<y<1,2\le x\\\int_0^x\int_0^1\frac14(u+2v)dvdu=\frac14\int_0^x[uv+v^2]_{v=0}^{1}du=\frac14\int_0^x(u+1)du=\frac14[\frac{u^2}2+u]_{u=0}^x=\frac{x^2}8+\frac{x}{4}&1\le y,0<x<2 \\1& y\ge1,x\ge2\end{cases}$$
 
----
+  ---
 
  (d). Find the pdf of the random variable $Z=9/(X + 1)^2$
 
@@ -41,14 +41,14 @@ For $Z=g(x)=9/(X + 1)^2$ is monotone when $0<x<2$, $X=g^{-1}(z)=3Z^{-\frac12}-1$
 
 $$f_Z(z)=\begin{cases}f_X(g^{-1}(z))|\frac{d}{dz}g^{-1}(z)|=\frac14(3z^{-\frac12}-1+1)|-\frac32z^{-\frac32}|=\frac98z^{-2}\quad1<z<9 \\0\qquad elsewhere\end{cases}$$
 
----
+  ---
 
 **4.11** Let U the number of trials needed to get the first head and V the number of trials needed to get two heads in repeated tosses of a fair coin. Are U and V independent random variables?
 
 For $U\sim Geom(p=\frac12),u=1,2..$ and $V\sim N Bin(p=\frac12,r=2),v=2,3..$, the distribution of (U,V) is $\{(u,v):u=1,2,..;v=u+1,u+2,..\}$, which is not a cross-product set. Given $U=u$, $V>u$ is always true and U and V are not independent.
 
 
----
+  ---
 
 **4.16** Let X and Y be independent random variables with the same geometric distribution.
 
@@ -62,7 +62,7 @@ $u=1,2..,v=0,\pm1,\pm2,..$
 
 Since the joint pmf factors into a function of u and v, U and V are independent.
 
----
+  ---
 
  (b). Find the distribution of $Z=X/(X+Y)$, where we define $Z=0$ if $X+Y=0$.
 
@@ -74,7 +74,7 @@ This is a geometric series with common ratio $0<(1-p)^{s}<1$, therefore
 
 $$=(\frac{p}{1-p})^{2}\frac{(1-p)^{s}}{1-(1-p)^{s}}$$
 
----
+  ---
 
  (c). Find the joint pdf of X and X + Y.
 
@@ -82,7 +82,7 @@ Let $U=X+Y$, then $Y=U-X$
 
 $$P(X=x,U=x+y)=P(X=x,Y=u-x)=P(X=x)P(Y=u-x)=p(1-p)^{x-1}p(1-p)^{u-x-1}=(\frac{p}{1-p})^{2}(1-p)^{u}$$
 
----
+  ---
 
 **4.17** Let X be an exponential(1) random variable, and define Y to be the integer part of X + 1, that is $Y=i+1$ if and only if $i\le X<i+1, i=0,1,2,..$
 
@@ -94,7 +94,7 @@ $$P(Y=i+1)=\int_{i}^{i+1}e^{-x}dx=\left.-e^{-x}\right|_{x=i}^{i+1}=-e^{-i-1}+e^{
 
 Which is a Geometric distribution with $p=1-\frac1e,x=0,1,2,..$
 
----
+  ---
 
 (b) Find the conditional distribution of $X-4$ given $Y\ge5$.
 
@@ -106,7 +106,7 @@ According to the 'memoryless' property of Exponential distribution,
 
 $$=1-P(X\ge x|X\ge4)=1-P(X\ge x)=P(X\le x)=e^{-x},\quad x\ge4$$
 
----
+  ---
 
 **4.20** $X_1$ and $X_2$ are independent $n(0, \sigma^2)$ random variables.
 
@@ -132,7 +132,7 @@ $$\therefore f_{Y_1,Y_2}(y_1,y_2)=f_{X_1,X_2}(h_1(y_1,y_2))\cdot f_{X_1,X_2}(h_2
 
 $\quad 0<y_1<\infty,|y_2|<1$
 
----
+  ---
 
  (b). Show that $Y_1$ and $Y_2$ are independent, and interpret this result geometrically.
 
@@ -152,54 +152,46 @@ It is ture that the distance from the origin is independent of the orientation -
 
  (a). Find the constants A, B, C, and D that satisfy
 
-1 1
-1 + (W/U)2 1 + « z - w)/r)2
-Aw B Cw
-1 + (w/a)2 +
-1 + (w/aF - 1 + « z 􀤃 w)/r)2
+$\frac1{1+(\frac{w}\sigma)^2} \frac1{1+(\frac{z-w}{\tau})^2}=\frac{Aw}{1+(\frac{w}\sigma)^2}+\frac{B}{1+(\frac{w}\sigma)^2}-\frac{Cw}{1+(\frac{z-w}{\tau})^2}-\frac{D}{1+(\frac{z-w}{\tau})^2}$, where A, B, C, and D may depend on z but not on w.
 
-where A, B, C, and D may depend on z but not on w.
 
- (b). Using the facts that
 
-D
-1 + « z - w)/r)2 '
-J 1 : t2 dt = 􀀦 log ( 1 + t2 ) + constant and J 􀁠
-2 dt = arctan(t) + constant,
-l + t
 
-evaluate (5.2.4) and hence verify (5.2.5).
 
-(Note that the integration in part (b) is quite delicate. Since the mean of a Cauchy does not exist, the integrals J::::' 1+(:/'0")2 dw and J􀄌oo 1+« .°:)/1')2 dw do not exist.
+
+ (b). Using the facts that evaluate (5.2.4) and hence verify (5.2.5).
+$\int\frac{t}{1+t^2}dt=\frac12\log(1+t^2)+$ constant and $\int\frac{1}{1+t^2}dt=\arctan(t)+$ constant
+(Note that the integration in part (b) is quite delicate. Since the mean of a Cauchy does not exist, the integrals $\int_{-\infty}^{\infty}\frac{Aw}{1+(\frac{w}\sigma)^2}dw$ and $\int_{-\infty}^{\infty}\frac{Cw}{1+(\frac{z-w}{\tau})^2}dw$ dw do not exist.
 However, the integral of the difference does exist, which is all that is needed.)
 
 ---
 
-**5.10** Let Xl , ... , Xn be a ra.ndom sample from a $n(\mu,\sigma2)$ population.
+**5.10** Let $X_1,..,X_n$ be a random sample from a $n(\mu,\sigma^2)$ population.
 
- (c). Calculate Var 82 a completely different (and easier) way: Use the fact that
-(n 1)82/(72 '" X-l '
+ (c). Calculate $VarS^2$ a completely different (and easier) way: Use the fact that $(n-1)S^2/\sigma^2\sim\chi^2_{n-1}$
+
+$\frac{(n-1)S^2}{\sigma^2}\sim\chi^2_{n-1}$
+
 
 ---
 
-**5.13** Let Xl , . . . , X". be iid n(J1., (72). Find a function of 82, the sample variance, say g(82),
-that satisfies Eg(82) (J". ( Hint: Try g(82) c..(S2, where c is a constant.)
+**5.13** Let $X_1,..,X_n$ be iid $n(\mu,\sigma^2)$. Find a function of $S^2$, the sample variance, say $g(S^2)$, that satisfies $Eg(S^2)=\sigma$. (Hint:Try $g(S^2)=c\sqrt{S^2}$, where c is a constant.)
 
 ---
 
-**5.15** Establish the following recursion relations for means and variances. Let X.,. and 8! be the mean and variance, respectively, of Xl , . . . , Xn• Then suppose another observation, Xn+l , becomes available. Show that
+**5.15** Establish the following recursion relations for means and variances. Let $\bar{X_n}$, and $S_n^2$ be the mean and variance, respectively, of $X_1,..,X_n$. Then suppose another observation, $X_{n+1}$ , becomes available. Show that
 
- (a). X _ xn + l + n n+1 - X',,- n + 1
+ (a). $\bar X_{n+1}=\frac{X_{n+1}-n\bar X_n}{n+1}$
 
 
- (b). n8n+l - (n - 1)8.. + n + - 2 1 (Xn+1 - Xn) .
+ (b). $nS^2_{n+1}=(n-1)S_n^2+(\frac{n}{n+1})(X_{n+1}-X_n)$
  
 
 ## HW3
 
 **5.22** Let X and Y be lid nCO, 1) random variables, and define Z = min(X, Y ) . Prove that Z2 '" XI
 
----
+ ---
 
 **5.24** Let Xl , . . . , Xn be a random sample from a population with pdf
 fx(x) = {􀄋jO if 0 < x < ()
@@ -207,7 +199,7 @@ otherwise.
 Let X(1) < . . . < X(n) be the order statistics. Show that X(l)j X(n) a.nd X(n) are
 independent random variables.
 
----
+ ---
 
 **5.25** As a generalization of the previous exercise, let Xl , . . . , Xn be iid with pdf 
 
@@ -236,7 +228,7 @@ Vn
 
 and that x = 0 gives Stirling's Formula.
 
----
+ ---
 
 **5.39** This exercise, and the two following, will look at some o f the mathematical details of convergence.
 
@@ -246,7 +238,7 @@ statements. )
 
  (b). In Example 5.5.B, find a subsequence of the XiS that converges almost surely, that is, that converges p ointwise.
  
----
+ ---
 
 **5.41** Prove Theorem 5.5.13; that is, show that
 
@@ -265,7 +257,7 @@ if x < J.L, then P(X" :0:; x) :0:; P ( I X" - J.L I e) . Deduce the => implicati
 
 **6.6** Let Xl , . . . , Xn be a random sample from a gamma(o, t3) population. Find a two dimensional sufficient statistic for (0 . t3) .
 
----
+ ---
 
 **6.9** For each of the following distributions let Xl , . . . , Xn be a random sample. Find a minimal sufficient statistic for e.
 
@@ -275,11 +267,11 @@ if x < J.L, then P(X" :0:; x) :0:; P ( I X" - J.L I e) . Deduce the => implicati
  (d). j (xI O)1f[1+(x-6)2] ,-00 < X < 00, -00 < B < 00 (Cauchy)
  (e). j(xIO)'2I e- lx-81 ,-00 < x < 00, -00 < B < 00 (double exponential)
  
----
+ ---
  
 **6.10** Show that the minimal sufficient statistic for the uniform(O, 0 + 1 ) , found in Example 6.2.15, is not complete.
 
----
+ ---
 
 **6.13** Suppose Xl and X2 are iid observations from the pdf j(xla) =, x > o, a >O. Show that (log XI )/(log X2) is an ancillary statistic.
 
@@ -291,7 +283,7 @@ if x < J.L, then P(X" :0:; x) :0:; P ( I X" - J.L I e) . Deduce the => implicati
 
 (b). Use Basu's Theorem to show that X{!) and 82 are independent.
 
----
+ ---
 
 **7.6** Let Xl , . . . , Xn be a random sample from the pdf
 
@@ -301,7 +293,7 @@ f(xIO) O -2 X , 0 < 0 􀀬 x < 00 .
  (b). Find the MLE of 8.
  (c). Find the method of moments estimator of O.
 
----
+ ---
 
 **7.10** The independent random variables X l , . . . , Xn have the common distribution
 
@@ -319,7 +311,7 @@ where the parameters a and jJ are positive.
 
 find the MLEs of a and jJ.
 
----
+ ---
 
 **7.11** Let X! , . . . , X", be iid with pdf
 
@@ -333,7 +325,7 @@ f(xI9) = 9x9-t, 0 􀋁 X 􀁱 1 , 0 < (} < 00 .
 
 **5.59** Prove that the algorithm of Example 5.6.7 generates a beta( a, b) random variable.
 
----
+ ---
 
 **5.60** Generalize the algorithm of Example 5.6.7 to apply to any bounded pdf; that is, for an arbitrary bounded pdf f(x) on [a, b), define c = maxa:<;z:9 f (x) . Let X and Y be independent, with X '" uniform(a, b) and Y '" uniform(O, c). Let d be a number greater than b, and define a new random variable
 
@@ -347,7 +339,7 @@ d if Y  f(X).
 (Hint: Use a geometric argument; a picture will help.)
 
 
----
+ ---
 
 **7.22** This exercise will prove the assertions in Example 7.2.16, and more. Let Xl, . . . , X n be a random sample from a n(O, a2) population, and suppose that the prior distribution on 0 is n(#, 72). Here we assume that a2, #, and 72 are all known.
 
@@ -357,7 +349,7 @@ d if Y  f(X).
 
  (c). Show that 1T(Oix, a2, #, 72), the posterior distribution of 0 , i s normal with mean and variance given by (7.2.10).
 
----
+ ---
 
 **7.23** If 82 is the sample variance based on a sample of size n from a normal population, we know that (n - 1 ) 82/u2 has a X!-l distribution. The conjugate prior for u2 is the inverted gamma pdf, 10(a, {3), given by
 
