--- a/docs/stat562/hw_stat562.Rmd
+++ b/docs/stat562/hw_stat562.Rmd
@@ -150,12 +150,24 @@ It is ture that the distance from the origin is independent of the orientation -
 
 **5.7** In Example 5.2. 10, a partial fraction decomposition is needed to derive the distribution of the sum of two independent Cauchy random variables. This exercise provides the details that are skipped in that example.
 
- (a). Find the constants A, B, C, and D that satisfy
+ (a). Find the constants A, B, C, and D that satisfy $\frac1{1+(\frac{w}\sigma)^2} \frac1{1+(\frac{z-w}{\tau})^2}=\frac{Aw}{1+(\frac{w}\sigma)^2}+\frac{B}{1+(\frac{w}\sigma)^2}-\frac{Cw}{1+(\frac{z-w}{\tau})^2}-\frac{D}{1+(\frac{z-w}{\tau})^2}$, where A, B, C, and D may depend on z but not on w.
 
-$\frac1{1+(\frac{w}\sigma)^2} \frac1{1+(\frac{z-w}{\tau})^2}=\frac{Aw}{1+(\frac{w}\sigma)^2}+\frac{B}{1+(\frac{w}\sigma)^2}-\frac{Cw}{1+(\frac{z-w}{\tau})^2}-\frac{D}{1+(\frac{z-w}{\tau})^2}$, where A, B, C, and D may depend on z but not on w.
 
-$$f_Z(z)=\int_{-\infty}^{\infty}\frac1{\pi\sigma}\frac1{1+(\frac{w}\sigma)^2}\frac1{\pi\tau}\frac1{1+(\frac{z-w}\tau)^2}dw=\frac1{\pi^2\sigma\tau}\int_{-\infty}^{\infty}\frac1{1+(\frac{w}\sigma)^2} \frac1{1+(\frac{z-w}{\tau})^2}=\frac1{\pi^2\sigma\tau}\int_{-\infty}^{\infty}\left(\frac{Aw}{1+(\frac{w}\sigma)^2}+\frac{B}{1+(\frac{w}\sigma)^2}-\frac{Cw}{1+(\frac{z-w}{\tau})^2}-\frac{D}{1+(\frac{z-w}{\tau})^2}\right)$$
+$$f_Z(z)=\int_{-\infty}^{\infty}\frac1{\pi\sigma}\frac1{1+(\frac{w}\sigma)^2}\frac1{\pi\tau}\frac1{1+(\frac{z-w}\tau)^2}dw=\frac1{\pi^2\sigma\tau}\int_{-\infty}^{\infty}\left(\frac{Aw}{1+(\frac{w}\sigma)^2}+\frac{B}{1+(\frac{w}\sigma)^2}-\frac{Cw}{1+(\frac{z-w}{\tau})^2}-\frac{D}{1+(\frac{z-w}{\tau})^2}\right)dw$$
 
+$$\begin{cases}\int_{-\infty}^{\infty}\left(\frac{Aw}{1+(\frac{w}\sigma)^2}+\frac{C(z-w)}{1+(\frac{z-w}{\tau})^2}\right)dw=\left[\frac{\sigma^2A}2\ln(1+(\frac{w}\sigma)^2)-\frac{\tau^2C}2\ln(1+(\frac{z-w}\tau)^2)\right]_{-\infty}^{\infty} &(1)  \\
+\int_{-\infty}^{\infty}\frac{B}{1+(\frac{w}\sigma)^2}dw=B\sigma\int_{-\infty}^{\infty}\frac{1}{1+(\frac{w}\sigma)^2}d\frac{w}\sigma=B\sigma[\arctan(\frac{z-w}{\tau})]_{-\infty}^{\infty}=\pi\sigma B &(2)\\
+-\int_{-\infty}^{\infty}\frac{D}{1+(\frac{z-w}{\tau})^2}dw=D\tau\int_{-\infty}^{\infty}\frac{1}{1+(\frac{z-w}{\tau})^2}d\frac{z-w}{\tau}=D\tau[\arctan(\frac{z-w}{\tau})]_{-\infty}^{\infty}=-\pi\tau D &(3)\\
+-\int_{-\infty}^{\infty}\frac{Cz}{1+(\frac{z-w}{\tau})^2}dw=Cz\tau\int_{-\infty}^{\infty}\frac{1}{1+(\frac{z-w}{\tau})^2}d\frac{z-w}{\tau}=Cz\tau[\arctan(\frac{z-w}{\tau})]_{-\infty}^{\infty}=-\pi\tau Cz &(4)
+\end{cases}$$
+
+$$\therefore f_Z(z)=\frac1{\pi^2\sigma\tau}\left((1)+(2)+(3)+(4)\right)=\frac1{\pi(\sigma+\tau)}\frac1{1+(\frac{z}{\sigma+\tau})^2},\quad -\infty<z<\infty$$
+
+$$(1)+(2)+(3)+(4)=\frac{\pi\sigma\tau}{(\sigma+\tau)[1+(\frac{z}{\sigma+\tau})^2]}$$
+
+$$\begin{cases} \left[\frac{\sigma^2A}2\ln(1+(\frac{w}\sigma)^2)-\frac{\tau^2C}2\ln(1+(\frac{z-w}\tau)^2)\right]_{-\infty}^{\infty}=0\\
+\pi\sigma B-\pi\tau D-\pi\tau Cz=\frac{\pi\sigma\tau}{(\sigma+\tau)[1+(\frac{z}{\sigma+\tau})^2]}
+\end{cases}\implies $$
 
 
 
