--- a/docs/stat562/note_stat562.Rmd
+++ b/docs/stat562/note_stat562.Rmd
@@ -20,6 +20,8 @@ define $U=X+Y$ and $V=Y$
 
 $$f_{U,V}(u,v)=f_{X,Y}(u-v,v)=\frac{\theta^{u-v}e^{-\theta}}{(u-v)!}\frac{\lambda^ve^{-\lambda}}{v!},\quad v=0,1,2,..,u=v,v+1,v+2,..$$
 
+**Theorem 4.3.2** if $X\sim Poisson(\theta)$ and $Y\sim Poisson(\lambda)$ and X and Y are indepedent, then $X+Y\sim Poisson(\theta+\lambda)$.
+
 `2019.01.08`
 `p.12`
 
@@ -27,7 +29,7 @@ Using Moment Generating Function (Theorem 4.2.12)
 
 $$M_W(t)=M_X(t)M_Y(t)=e^{\mu_1(e^t-1)}e^{\mu_2(e^t-1)}=e^{(\mu_1+\mu_2)(e^t-1)}$$
 
-**Theorem 4.3.2** if $X\sim Poisson(\theta)$ and $Y\sim Poisson(\lambda)$ and X and Y are indepedent, then $X+Y\sim Poisson(\theta+\lambda)$.
+So $W\sim Poisson(\mu_1+\mu_2)$
 
 If (X,Y) is a continuous random vector with joint pdf $f_{X,Y}(x,y)$, then the joint pdf of (U, V) can be expressed in terms of $f_{X,Y}(x,y)$ in a manner analogous to (2.1.8). As before, $A=\{(x,y):f_{X,Y}(x,y)>0\}$ and $B=\{(u,v): u=g_1(x,y)\ \text{and}\ v=g_2(x,y)\ \text{for some}\ (x,y)\in A\}$. The joint pdf $f_{U,V}(u,v)$ will be positive on the set B. For the simplest version of this result we assume that the transformation $u=g_1(x,y)$ and $v=g_2(x,y)$ defines a one-to-one transformation of A onto B. The transformation is
 onto because of the definition of B. We are assuming that for each $(u,v)\in B$ there is only one $(x,y)\in A$ such that $(u,v)=(g_1(x,y),g_2(x,y))$. For such a one-to-one, onto transformation, we can solve the equations $u=g_1(x,y)$ and $v=g_2(x,y)$ for x and y in terms of u and v. We will denote this inverse transformation by $x=h_1(u,v)$ and $y=h_2(u,v)$. The role played by a derivative in the univariate case is now played by a quantity called the Jacobian of the transformation. This function of (u,v), denoted by J, is the determinant of a matrix of partial derivatives. It is defined by
@@ -44,8 +46,18 @@ $$f_{U,V}(u,v)=f_{X,Y}(h_1(u,v),\ h_2(u,v))|J|,$$
 
 The "reproductive" property: adding independent r.v.s from a family of distribution produces a new r.v. from the same family.
 
+**Example 4.3.3 (Distribution of the product of beta variables)** Let $X\sim Beta(α,β)$ and $Y\sim Beta(α+β,\gamma)$ be independent random variables. The joint pdf of $(X,Y)$ is
+
 `2019.01.10`
 `p.1-5`
+
+**~ 4.3.4 (Sum and difference of normal variables)**: Let X and Y have joint pdf $f(x,y)=\frac14e^{-\frac{x+y}2}$, $0<x<\infty,0<y<\infty$. Find the pdf for $u=\frac{X-Y}2$.
+
+Let $v=Y$ so that the system is invertible. $X=2u+v, Y=v$
+
+$$J=\begin{vmatrix}\frac{\partial x}{\partial u} & \frac{\partial x}{\partial v} \\ \frac{\partial y}{\partial u} & \frac{\partial y}{\partial v} \end{vmatrix}=\begin{vmatrix}2 & 1 \\ 0 & 1 \end{vmatrix}=2$$
+
+$$g(u,v)=f(x,y)|J|=\frac14e^{-\frac{x+y}2}2=\frac12e^{-\frac{2u+v+v}2}=\frac12e^{-(u+v)}$$
 
 ```{r echo=FALSE}
 
@@ -54,29 +66,19 @@ axis(1, pos=0, xlab="x");abline(v =-2, lty = 2)
 axis(2, pos=0, ylab="y");abline(h =6, lty = 2)
 polygon(x=c(-5,0,10,10,-5), y=c(10,0,0,10,10), density=10, angle=45)
 
-plot(function(x){x}, from=-0.5, to=1.5, axes=FALSE, asp=1,ylab="y")
-axis(1, pos=0, xlab="x");abline(v =0.6, lty = 2)
-axis(2, pos=0, ylab="y");abline(h =0.8, lty = 2)
-polygon(x=c(0,1,0), y=c(0,1,1), density=10, angle=45)
-
-
 # polygon(x=c(-1:1, rev(-1:1 )), y=c(rep(0, 2), rep(4,6)), density=10, angle=45)
 
 # x1 <- min(which(dens$x >= q75))  
 # x2 <- max(which(dens$x <  q95))
 # with(dens, polygon(x=c(x[c(x1,x1:x2,x2)]), y= c(0, y[x1:x2], 0), col="gray"))
 
-
-
 # dd <- with(dens,data.frame(x,y))
 
 library(ggplot2)
-
 # qplot(x,y,data=dd,geom="line")+  geom_ribbon(data=subset(dd,x>q75 & x<q95),aes(ymax=y),ymin=0,fill="red",colour=NA,alpha=0.5)
-
 # qplot(x=-5:5,y, fun=function(x){-2*x}, stat="function", geom="line", xlab="x", ylab="y")
 
-ggplot(data.frame(x=c(-5, 1)), aes(x=x)) + stat_function(fun=function(x){-2*x}, geom="line",linetype="dashed") + xlab("x") + ylab("y")+
+#ggplot(data.frame(x=c(-5, 1)), aes(x=x)) + stat_function(fun=function(x){-2*x}, geom="line",linetype="dashed") + xlab("x") + ylab("y")+
   geom_vline(xintercept = 0)+geom_hline(yintercept = 0)+
   coord_fixed(ratio = 1, xlim =c(-5, 2),ylim =c(-1, 8))+
   scale_x_continuous(breaks = c(-5,-4,-2,-1,0,1)) +
@@ -84,23 +86,38 @@ ggplot(data.frame(x=c(-5, 1)), aes(x=x)) + stat_function(fun=function(x){-2*x}, 
 
 ```
 
-
-**A continuous example**: Let X and Y have joint pdf $f(x,y)=\frac14e^{-\frac{x+y}2}$, $0<x<\infty,0<y<\infty$. Find the pdf for $u=\frac{X-Y}2$.
-
-Let $v=Y$ so that the system is invertible. $X=2u+v, Y=v$
-
-$$J=\begin{vmatrix}\frac{\partial x}{\partial u} & \frac{\partial x}{\partial v} \\ \frac{\partial y}{\partial u} & \frac{\partial y}{\partial v} \end{vmatrix}=\begin{vmatrix}2 & 1 \\ 0 & 1 \end{vmatrix}=2$$
-
-$$g(u,v)=f(x,y)|J|=\frac14e^{-\frac{x+y}2}2=\frac12e^{-\frac{2u+v+v}2}=\frac12e^{-(u+v)}$$
-
 $$0<x<\infty,0<y<\infty\implies0<2u+v<\infty,0<v<\infty\implies v>-2u$$
 
 $$g_U(u)=\left\{ \begin{array}\ \int_{-2u}^\infty\frac12e^{-(u+v)}dv=\frac12e^{-u}\int_{-2u}^\infty e^{-v}dv=\frac12e^{-u}\left[-e^{-v}\right]_{-2u}^\infty=\frac12e^{-u}\left[0+e^{2u}\right] & u<0 \\ \int_{0}^\infty\frac12e^{-(u+v)}dv=\frac12e^{-u}\int_{0}^\infty e^{-v}dv=\frac12e^{-u}\left[-e^{-v}\right]_{0}^\infty=\frac12e^{-u}\left[0+1\right] & u\ge0 \end{array} \right\}=\frac12e^{|u|}$$
 which is Double Exponential or Laplace Distribution
 
-`p.6-9`
+`2019.01.15``p.11-14`
 
-**Example 4.3.6 (Distribution of the ratio of normal variables)** Let X and Y be independent n(O, 1 ) random variables. Consider the transformation $U =\frac{X}Y$ (*and V=|Y| in textbook*) find the pdf of u
+**Theorem 4.3.5** Let X and Y be independent random variables. Let g(x) be a function only of a; and h(y) be a function only of y. Then the random variables U=g(X)and V=h(Y) are independent.
+
+Proof
+
+We will prove the theorem assuming U and V are continuous random variables. For any $u\in R,v\in R$,define
+
+$$\begin{array}\mathcal{A_u}=\{x:g(x)\le u\}\\ \mathcal{B_v}=\{y:h(y)>v\}\end{array}$$
+
+Then the joint cdf of (U,V) is
+
+$$F_{U,V}(u,v)\begin{array}{l} =P(U\le u,V\le v) &  \text{definition of cdf} \\
+= P(X\in A_u, Y\in B_v) & \text{definition of U and V} \\
+= P(X\in A_u)P(Y\in B_v) & \text{Theorem 4.2.10} \end{array}$$
+
+The joint pdf of (U,V) is 
+
+$$F_{UV}(u,v)=\frac{\partial^2}{\partial{u}\partial{v}}F_{UV}(u,v)=\left(\frac{d}{du}P(X\in A_u)\right) \left(\frac{d}{dv}P(Y\in B_v)\right)$$
+
+where, as the notation indicates, the first factor is a function only of u and the second
+factor is a function only of v. Hence, by Lemma 4.2.7, U and V are independent.
+
+
+`2019.01.10``p.6-9`
+
+**Example 4.3.6 (Distribution of the ratio of normal variables)** Let X and Y be independent $n(O,1)$ random variables. Consider the transformation $U =\frac{X}Y$ (*and V=|Y| in textbook*) find the pdf of u
 
 $$\left.\begin{array}\mathcal{A_0}=\{(x,y):y=0\}\\ \mathcal{A_1}=\{(x,y):y>0\} \\ \mathcal{A_2}=\{(x,y):y<0\} \\ \end{array}\right\}\to\mathcal{B}=\{(u,v):v>0\}$$
 
@@ -121,48 +138,7 @@ Let $s=\frac{(u^2+1)v^2}2$, $ds=(u^2+1)vdv$
 $$g_U(u)=\frac1\pi\int_0^{\infty}e^{-s}\frac1{u^2+1}ds=\frac1\pi\frac1{u^2+1}\left[-e^{-s}\right]_0^\infty=\frac1\pi\frac1{u^2+1},-\infty<u<\infty$$
 which is the Cauchy distribution.
 
-**Theorem 4.3.5** Let X and Y be independent random variables. Let g(x) be a function only of a; and h(y) be a function only of y. Then the random variables U=g(X)and V=h(Y) are independent.
 
-Proof
-
-We will prove the theorem assuming U and V are continuous random variables. For any $u\in R,v\in R$,define
-
-$$\begin{array}\mathcal{A_u}=\{x:g(x)\le u\}\\ \mathcal{B_v}=\{y:h(y)>v\}\end{array}$$
-
-Then the joint cdf of (U,V) is
-
-$$F_{U,V}(u,v)\begin{array}{l} =P(U\le u,V\le v) &  \text{definition of cdf} \\
-= P(X\in A_u, Y\in B_v) & \text{definition of U and V} \\
-= P(X\in A_u)P(Y\in B_v) & \text{Theorem 4.2.10} \end{array}$$
-
-The joint pdf of (U,V) is
-fj2 - fu, v{u, v) = 8u8v Fu,v {u, v)
-= (:UP(X E Au)) (:VP(Y E Bv)) ,
-(by (4.1 .4))
-where, as the notation indicates, the first factor is a function only of u and the second
-factor is a function only of v. Hence, by Lemma 4.2.7, U and V are independent.
-
-
-
-`p.10-13`
-
-**Example** $f(x,y)=x+y$, $0<x<1,0<y<1$, find $\rho_{XY}$
-
-$\rho_{XY}=-\frac1{11}$
-
-`p.14-17`
-
-*What does actually measure?*
-
-Suppose $E[Y|X]$ is a linear function of X, or suppose that $E[Y|X]=a+bx$, then
-
-$$E[Y]=E[E[Y|X]]=E[a+bX]=a+bE[X]$$
-
-Also,
-
-Alternately,
-
-$\rho_{XY}=b\frac{\sigma_X}{\sigma_Y}$
 
 
 
@@ -180,7 +156,7 @@ $E[X|Y]=\int_{-\infty}^{\infty}xf(x|y)dx$ is a random variable, and is a functio
 
 Definition: $V[X|Y]=E[(X-E[X|Y])^2|Y]$
 
-`p.2-3`
+`2019.01.08``p.2-3`
 
 **Theorem 4.4.3 Law of iterated Expectation** if X and Y are any two random variables, then
 
@@ -188,13 +164,15 @@ $$EX=E(E(X|Y))$$
 
 provided that the expectation exist.
 
-Proof:
+Proof:**Law of iterated expectations**
 
-$E(E(X|Y))=\int_{-\infty}^{\infty}E[X|y]g(y)dy=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}xf(x|y)dx\right]g(y)dy=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}x\frac{f(x,y)}{g(y)}dx\right]g(y)dy=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}{f(x,y)dy}\right]xdx=\int_{-\infty}^{\infty}f_X(x)xdx=E[X]$
+$$E(E(X|Y))=\int_{-\infty}^{\infty}E[X|y]g(y)dy=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}xf(x|y)dx\right]g(y)dy=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}x\frac{f(x,y)}{g(y)}dx\right]g(y)dy$$
+
+$$=\int_{-\infty}^{\infty}\left[\int_{-\infty}^{\infty}{f(x,y)dy}\right]xdx=\int_{-\infty}^{\infty}f_X(x)xdx=E[X]$$
 
 **Theorem 4.4.7 (Conditional variance identity)** For any two random varibles X and Y,
 
-`p.4-6`
+`2019.01.08``p.4-6`
 
 $$VarX=E(Var(X|Y))+Var(E(X|Y))$$
 
@@ -204,9 +182,9 @@ Proof:
 
 $$V[X]=E[(X-\mu_x)^2]=E[(X-E[X|Y]+E[X|Y]-\mu_x)^2]=E[(X-E[X|Y])^2]+E[(E[X|Y]-\mu_x)^2]+2E[(X-E[X|Y])(E[X|Y]-\mu_x)]$$
 
-$2E[(x-E[X|y])(E[X|y]-\mu_x)]=2\int_{-\infty}^{\infty}\int_{-\infty}^{\infty}(x-E[X|y])(E[X|y]-\mu_x)f(x,y)dxdy=2\int_{-\infty}^{\infty}(E[X|y]-\mu_x)\left\{\int_{-\infty}^{\infty}(x-E[X|y])f(x,y)dx\right\}dy=0$
+$$2E[(x-E[X|y])(E[X|y]-\mu_x)]=2\int_{-\infty}^{\infty}\int_{-\infty}^{\infty}(x-E[X|y])(E[X|y]-\mu_x)f(x,y)dxdy=2\int_{-\infty}^{\infty}(E[X|y]-\mu_x)\left\{\int_{-\infty}^{\infty}(x-E[X|y])f(x,y)dx\right\}dy=0$$
 
-$\int_{-\infty}^{\infty}(x-E[X|y])f(x,y)dx=\int_{-\infty}^{\infty}xf(x,y)dx-E[X|y]\int_{-\infty}^{\infty}f(x,y)dx=\int_{-\infty}^{\infty}xf(x|y)g(y)dx-E[X|y]g(y)=g(y)E[X|y]-E[X|y]g(y)$
+$$\int_{-\infty}^{\infty}(x-E[X|y])f(x,y)dx=\int_{-\infty}^{\infty}xf(x,y)dx-E[X|y]\int_{-\infty}^{\infty}f(x,y)dx=\int_{-\infty}^{\infty}xf(x|y)g(y)dx-E[X|y]g(y)=g(y)E[X|y]-E[X|y]g(y)$$
 
 (using law of iterated expcetations) $E[(X-E[X|Y])^2]=E[E(X-E[X|Y])^2|Y]=E(Var(X|Y))$ 
 
@@ -214,7 +192,7 @@ Let $W=E[X|Y]$, then $E[w]=E(E[X|Y])=E[X]=\mu_x$, $E[(E[X|Y]-\mu_x)^2]=E[(W-E[w]
 
 ### 4.5 Covariance and Correlation
 
-`p.8`
+`2019.01.08``p.8`
 
 **Definition 4.5.1** The covariance of X and Y is the number defined by
 
@@ -236,10 +214,42 @@ $$\sigma_{XY}=Cov(X,Y)=E[XY]-\mu_X\mu_Y$$
 
 $\sigma_{XY}=E[(X-\mu_X)(Y-\mu_Y)]=E[XY-Y\mu_X-X\mu_Y+\mu_X\mu_Y]=E[XY]-E[Y]\mu_X-E[X]\mu_Y+\mu_X\mu_Y=E[XY]-\mu_Y\mu_X-\mu_X\mu_Y+\mu_X\mu_Y=E[XY]-\mu_X\mu_Y$
 
-$$\begin{array}{l} Cov(aX,bY)=abCov(X,Y) \\
-Cov(X,Y+Z)=Cov(X,Y)+Cov(X,Z)  \\
-Cov(X,c)=0 \end{array}$$
+`2019.01.15``p.2-3`
 
+Properties of $Cov(x,y)$
+
+$$\begin{array}{l} Cov(aX,bY)=abCov(X,Y) & (1)\\
+Cov(X,Y+Z)=Cov(X,Y)+Cov(X,Z)  & (2) \\
+Cov(X,c)=0  & (3) \end{array}$$
+
+Properties  (1) and (2) make $Cov(x,y)$ a bilinear operator.
+
+`2019.01.10``p.10-13`
+
+**~ Example 4.5.4 (Correlation-I), 4.5.8 (Correlation-II), 4.5.9 (Correlation-III)** 
+
+$f(x,y)=x+y$, $0<x<1,0<y<1$, find $\rho_{XY}$
+
+$E[XY]=\int_0^1\int_0^1xy(x+y)dxdy=\int_0^1[\frac13x^3y+\frac12x^2y^2]_{x=0}^1dy=\int_0^1[\frac13y+\frac12y^2]dy=[\frac16y^2+\frac16y^3]_{x=0}^1=\frac13$
+
+$$f_X(x)=\int_0^1(x+y)dy=\left.xy+\frac12y^2\right|_{y=0}^1=x+\frac12, 0<x<1$$
+
+$E[X]=\int_0^1x(x+\frac12)dx=\left.\frac13x^3+\frac14x^2\right|_{0}^1=\frac7{12}$
+
+$E[X^2]=\int_0^1x^2(x+\frac12)dx=\left.\frac14x^4+\frac16x^3\right|_{0}^1=\frac5{12}$
+
+Because X and Y were interchangeable in $f(x,y)$, we can conclude
+
+|   |marginal pdf|    E[]     |   $E[^2]$  | $\sigma=\sqrt{E[^2]-(E[])^2}$|
+|---| ---        |    ---     |     ---    |  ---                         |
+| X |$x+\frac12$ |$\frac7{12}$|$\frac5{12}$|$\frac{\sqrt{11}}{12}$        |
+| Y |$y+\frac12$ |$\frac7{12}$|$\frac5{12}$|$\frac{\sqrt{11}}{12}$        |
+
+$\sigma_{XY}=\frac13-\frac7{12}\frac5{12}=-\frac1{144}$
+
+$\sigma_{X}=\sigma_{Y}=\sqrt{\frac5{12}-(\frac7{12})^2}=\frac{\sqrt{11}}{12}$$
+
+$$\rho_{XY}=\frac{-\frac1{144}}{\frac{\sqrt{11}}{12}\frac{\sqrt{11}}{12}}=-\frac1{11}$$
 
 **Theorem 4.5.5** If X and Y are independent (uncorrelated) random variables, then $Cov(X,Y)=0$ and $\rho_{XY}=0$
 
@@ -252,10 +262,48 @@ If X and Y are indepent random variables, then
 
 $$Var(aX+bY)=a^2VarX+b^2VarY$$
 
+`2019.01.15``p.7`
+
+$$Var(X+Y)=VarX+VarY+2Cov(X,Y)$$
+
+If X and Y are uncorrelated, then
+
+$$Var(X+Y)=VarX+VarY$$
+
 **Theorem 4.5.7** For any random variables X and Y,
 
- a. $-1\le \rho_{XY}\le1$.
- b. $|\rho_{XY}|= 1$ if and only if there exist numbers $a\neq0$ and b such that $P(Y=aX+b)=1$. If $\rho_{XY}=1$, then $a>0$, and if $\rho_{XY}=-1$, then $a<0$.
+  a. $-1\le \rho_{XY}\le1$.
+  b. $|\rho_{XY}|=1$ if and only if there exist numbers $a\neq0$ and b such that $P(Y=aX+b)=1$. If $\rho_{XY}=1$, then $a>0$, and if $\rho_{XY}=-1$, then $a<0$.
+
+
+`2019.01.10``p.14-17`
+
+*What does actually measure?*
+
+Suppose $E[Y|X]$ is a linear function of X, or suppose that $E[Y|X]=a+bx$,
+
+ then $E[Y]=E[E[Y|X]]=E[a+bX]=a+bE[X]$, by **4.4.3**
+
+Also, $E[XE[Y|X]]=E[X(a+bX)]=aE[X]+bE[X^2]$
+
+Alternately, $E[XE[Y|X]]=\int_{-\infty}^{\infty}xE[Y|x]f_X(x)dx$, by **2.2.1**
+
+$=\int_{-\infty}^{\infty}x\left[\int_{-\infty}^{\infty}yf_Y(y|x)dy\right]f_X(x)dx$, by **4.2.3**
+
+$=\int_{-\infty}^{\infty}\int_{-\infty}^{\infty}xyf(x,y)dydx=E[XY]$, by **4.1.10**. Now 
+
+$$\sigma_{XY}=E[XY]-\mu_X\mu_Y=a\mu_X+bE[X^2]-\mu_X\mu_Y=a\mu_X+b(\sigma_X^2+\mu_X^2)-\mu_X(a+b\mu_X)=b\sigma_X^2$$
+
+$$\rho_{XY}=\frac{\sigma_{XY}}{\sigma_{X}\sigma_{Y}}=\frac{b\sigma_X^2}{\sigma_{X}\sigma_{Y}}=b\frac{\sigma_X}{\sigma_Y}$$
+
+`2019.01.15``p.6`
+
+Cauchy-Schuwarz also says that equality occurs iff $\vec u= c\vec v$ for some c
+
+So $|\rho_{XY}|=1$ iff $Y-\mu_Y=c(X-\mu_X)$, $Y=cX-\mu_Y-c\mu_X)$
+
+Therefore, the correlation equals $\pm1$ iff Y is a perfect linear function of X.
+
 
 **Definition 4.5.10** bivariate normal pdf
 
@@ -283,9 +331,36 @@ $$f(x_1,..,x_n) =g_1(x_1)\cdots g_n(x_n)$$
 
 **Example 4.6.13 (Multivariate change of variables)**
 
+
 **Theorem 4.7.3 (Cauchy-Schwarz Inequality)** For any two random variables X and Y,
 
 $$|EXY|\le E|XY|\le(E|X|^2)^{\frac12}(E|X|^2)^{\frac12}$$
+`2019.01.15``p.4`
+
+Consider $\{X-\mu_X| X \text{ is a random variable}\}$. That is, the set of all random variables with mean 0.
+
+This is a well-defined vector space, where the scalars are the real number.
+
+The covariance operator will satisfy the definition of an inner product on this vector space.
+
+The Cauchy–Schwarz inequality says
+
+
+The Cauchy–Schwarz inequality states that for all vectors u and v of an inner product space it is true that
+
+$$|\langle\vec{u},\vec{v}\rangle|^{2}\le \langle \vec{u} ,\vec{u} \rangle \cdot \langle \vec{v},\vec{v}\rangle $$
+where $\langle \cdot ,\cdot \rangle$ is the inner product. Examples of inner products include the real and complex dot product, see the examples in inner product. Equivalently, by taking the square root of both sides, and referring to the norms of the vectors, the inequality is written as
+
+$$|\langle\vec{u},\vec{v}\rangle|\le \|\vec{u} \|\|\vec{v} \|$$
+
+`2019.01.15``p.5`
+
+Apply this to the covariance operator:
+
+$$|Cov(X-\mu_X,Y-\mu_Y)|\ge \sqrt{Cov(X-\mu_X,X-\mu_X)}\cdot\sqrt{Cov(Y-\mu_Y,Y-\mu_Y)}$$
+$$|Cov(X,Y)|\le \sqrt{Var(X)Var(Y)}\implies |\sigma_{XY}|\le \sigma_{X}\sigma_{Y}\quad \therefore |\rho_{XY}|\le1$$
+
+proof **4.5.7**
 
 **Example 4.7.4 (Covariance inequality)** If X and Y have means $\mu_X,\mu_Y$ and variances $\sigma_X^2,\sigma_Y^2$ , respectively, we can apply the Cauchy-Schwarz Inequality to
 get 
@@ -298,9 +373,19 @@ Recalling the definition of the correlation coefficient,$\rho$, we have proved t
 
 ## 5. Properties of a Random Sample
 
+`2019.01.15``p.8`
+
+### 5.1 Basic Concepts of Random Samples
+
+**Definition 5.1.1** The random variables $X_1,..,X_n$ are called a random sample of size n from the population $f(x)$ if $X_1,..,X_n$ are mutually independent random variables and the marginal pdf or pmf of each $X_i$ is the same function $f(x)$. Alternatively, $X_1,..,X_n$ are called independent and identically distributed random variables with pdf or pmf $f(x)$. This is commonly abbreviated to $iid$ random variables.
+
 ### 5.2 Sums of Random Variables from a Random Sample
 
-**Definition 5.2.1** The sample mean is the arithmetic average of the values in a random sample. It is usually denoted by
+**Definition 5.2.1** Let $X_1,..,X_n$ be a random sample of size n from a population and let $T(x_1,..,x_n)$ be a real-valued or vector-valued function whose domain includes
+the sample space of ($X_1,..,X_n$). Then the random variable or random vector $Y=T(X_1,..,X_n)$ is called a statistic. The probability distribution of a statistic Y
+is called the sampling distribution of Y.
+
+`2019.01.15``p.9`
 
 **Definition 5.2.2** The sample mean is the arithmetic average of the values in a random sample. It is usually denoted by
 
@@ -312,6 +397,12 @@ $$S^2=\frac1{n-1}\sum_{i=1}^n(X_i-\bar X)^2=\frac1{n-1}\sum_{i=1}^n(X_i^2-n\bar 
 The sample standard deviation is the statistic defined by $S=\sqrt{S^2}$
 
 **Theorem 5.2.4** $\sum_{i=1}^n(X_i-a)^2$ is minimized when $a=\bar x$
+
+Proof
+
+Let $g(a)=\sum_{i=1}^n(X_i-a)^2$, set
+
+$$g'(a)=\sum_{i=1}^n2(X_i-a)(-1)=0\implies a=\frac1n\sum_{i=1}^nX_i=\bar x$$
 
 
 **Lemma 5.2.5** 
