--- a/docs/stat562/note_stat562.Rmd
+++ b/docs/stat562/note_stat562.Rmd
@@ -79,10 +79,10 @@ library(ggplot2)
 # qplot(x=-5:5,y, fun=function(x){-2*x}, stat="function", geom="line", xlab="x", ylab="y")
 
 #ggplot(data.frame(x=c(-5, 1)), aes(x=x)) + stat_function(fun=function(x){-2*x}, geom="line",linetype="dashed") + xlab("x") + ylab("y")+
-  geom_vline(xintercept = 0)+geom_hline(yintercept = 0)+
-  coord_fixed(ratio = 1, xlim =c(-5, 2),ylim =c(-1, 8))+
-  scale_x_continuous(breaks = c(-5,-4,-2,-1,0,1)) +
- scale_y_continuous(breaks = c(-1, 0, 1, 2, 4, 6, 8, 10))
+#  geom_vline(xintercept = 0)+geom_hline(yintercept = 0)+
+#  coord_fixed(ratio = 1, xlim =c(-5, 2),ylim =c(-1, 8))+
+#  scale_x_continuous(breaks = c(-5,-4,-2,-1,0,1)) +
+# scale_y_continuous(breaks = c(-1, 0, 1, 2, 4, 6, 8, 10))
 
 ```
 
